src/style.css
:root {
    --main-bg-color: #0A090A;
    --main-text-color: #A09F9F;
    --main-text-hover: #C9AA5C;
    --item-text-colr: #CFCFCF;
    --line-bg-color: #BB3D28;
    --item-bg-color: #333;
    --item-bg-hover: rgba(100, 100, 100, 0.7);
}

body {
    font-size: 1em;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    margin: 20px;
    width: 760px;
}

.channels {
    display: grid;
    grid-template-rows: 30px repeat(5, 70px);
    row-gap: 5px;
    align-items: center;
    justify-items: center;
}

.channels > div {
    width: 32px;
    height: 32px;
    background-position: center;
}
.channels > div:nth-child(2) {
    background-image: url(/src/img/1.png);
}
.channels > div:nth-child(3) {
    background-image: url(/src/img/2.jpeg);
}
.channels > div:nth-child(4) {
    background-image: url(/src/img/3.png);
}
.channels > div:nth-child(5) {
    background-image: url(/src/img/4.png);
}
.channels > div:nth-child(6) {
    background-image: url(/src/img/5.png);
}
.channels > div:nth-child(7) {
    background-image: url(/src/img/6.png);
}

.scheduleContainer {
    display: grid;
    grid-template-columns: 50px 1fr;
    column-gap: 10px;
}

.schedule {
    position: relative;
    overflow: scroll;
    font-size: 0.85em;
    display: grid;
    grid-template-rows: 30px repeat(5, 70px);
    row-gap: 4px;
}

.schedule .row {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.schedule .timeline > div {
    width: 300px;
}

.schedule > .line {
    position: absolute;
    height: 100%;
    width: 2px;
    background-color: var(--line-bg-color);
    opacity: 0.6;
    z-index: 10;
}
.schedule .program {
    position: relative;
    height: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 70px;
}
.item {
    display: block;
    box-sizing: border-box;
    margin: 0 2px;
    padding: 4px;
    height: 100%;
    text-decoration: none;
    color: var(--item-text-colr);
    transition: 0.2s;
    background-color: var(--item-bg-color);
    border-radius: 5px;
}
.item:hover {
    background-color: var(--item-bg-hover);
    box-shadow: 0 0 20px rgba(132, 132, 132, 0.2);
}
.item > .title{
    margin-top: 4px;
    position: sticky;
    left: 4px;
}
.item > .time {
    font-size: 0.7em;
}
.program > .line {
    position: absolute;
    top: 0;
    height: 2px;
    background-color: var(--line-bg-color);
    opacity: 0.6;
}
.item > .cur {
    font-weight: bold;
}

.days {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    column-gap: 20px;
    margin-bottom: 16px;
}
.days > div {
    padding: 5px;
    text-align: center;
    cursor: pointer;
    transition: color, background-color 0.2s ease-in;
    font-weight: bold;
    color: var(--main-text-color);
    text-transform: uppercase;
    border-radius: 10px;
}
.days > div:hover, .days > div.active {
    color: var(--main-text-hover);
    background-color: #171717;
}
.days .day {
    font-size: 26px;
}

.button {
    display: inline-block;
    padding: 0 15px;
    cursor: pointer;
    opacity: 0.5;
    transition: 0.3s opacity;
}
.button:hover {
    opacity: 1;
}
.period {
    display: inline-block;
    width: 80px;
    text-align: center;
    line-height: 1;
    font-size: 16px;
    transition: transform 0.3s ease-in;
}
.period.out {
    transform: translateY(20px);
}

